# pytest-metadata

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES.rst  Pipfile  README.rst  development.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
pytest_metadata/: plugin.py
pytest_metadata/ci/: appveyor.py  circleci.py  gitlab_ci.py  jenkins.py  taskcluster.py  travis_ci.py
src/pytest_metadata/: plugin.py
tests/: test_metadata.py
