[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytest-metadata"
version = "2.0.3"
description = "pytest plugin for test session metadata"
license = "MPL-2.0"
authors = [
    "Dave Hunt <dhunt@mozilla.com>",
    "Jim Brännlund <jimbrannlund@fastmail.com>"
]
readme = "README.rst"
homepage = "https://github.com/pytest-dev/pytest-metadata"
repository = "https://github.com/pytest-dev/pytest-metadata"
keywords = [
    "pytest",
    "metadata"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
packages = [
    { include = "pytest_metadata", from = "src" },
]
include = [
    { path = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = ">=3.0.0,<8.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
tox = "^3.24.5"
pre-commit = "^2.17.0"

[tool.poetry.plugins.pytest11]
metadata = 'pytest_metadata.plugin'

[tool.black]
target-version = ['py37']
