[metadata]
name = pytest-metadata
description = pytest plugin for test session metadata
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytest-dev/pytest-metadata
author = Dave Hunt, Jim Brannlund
license = Mozilla Public License 2.0 (MPL 2.0)
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = pytest metadata

[options]
packages =
    pytest_metadata
    pytest_metadata.ci
install_requires = pytest>=2.9.0
python_requires = >=3.7
setup_requires =
    setuptools>=45.0
    setuptools-scm>=6.2.3
    wheel

[options.entry_points]
pytest11 =
    metadata = pytest_metadata.plugin
